--- a/frontend/templates/rule.html
+++ b/frontend/templates/rule.html
@@ -10,15 +10,17 @@
 </head>
 <body onload="startup();">
     <h1>Snap by rule</h1>
-    <input type="hidden" id="rule_snapquery_id" name="rule_snapquery_id" value={{snapquery_id}}>
+    <input type="hidden" id="rule_environment_statistics_id" name="rule_environment_statistics_id" value={{rule_environment_statistics_id}}>
+    <input type="hidden" id="rep_property" name="rep_property" value="{{rep_property}}">
+    <input type="hidden" id="rep_query_id" name="rep_query_id" value={{rep_query_id}}>
+
+    <!--input type="hidden" id="rule_snapquery_id" name="rule_snapquery_id" value={{snapquery_id}}>
     <input type="hidden" id="rule_snapfilter_id" name="rule_snapfilter_id" value={{snapfilter_id}}>
     <input type="hidden" id="rule_snapfilter_string" name="rule_snapfilter_string" value={{snapfilter_string}}>
     <input type="hidden" id="rule_query_type" name="rule_query_type" value="{{query_type}}">
     <input type="hidden" id="rule_transform_order" name="rule_transform_order" value="{{transform_order}}">
     <input type="hidden" id="rule_aggregation_type" name="rule_aggregation_type" value="{{aggregation_type}}">
-    <input type="hidden" id="rule_query_id" name="rule_query_id" value={{query_id}}>
-    <input type="hidden" id="rule_REQUIRED_properties" name="rule_REQUIRED_properties" value={{REQUIRED_properties}}>
-    <input type="hidden" id="rule_OPTIONAL_properties" name="rule_OPTIONAL_properties" value={{OPTIONAL_properties}}>
+    <input type="hidden" id="rule_REQUIRED_properties" name="rule_REQUIRED_properties" value={{REQUIRED_properties}}-->
 
     <button id="jump_to_results_button" onclick="jump_to_results()" style="display:none;"></button>
     <div style="width:100%;">
